[gd_scene load_steps=7 format=3 uid="uid://84cmjynnrjvp"]

[ext_resource type="Script" path="res://Scripts/UIController.gd" id="1_3tn08"]
[ext_resource type="Script" path="res://Scripts/ToolBar.gd" id="2_1fl1g"]
[ext_resource type="Script" path="res://Scripts/EditorWindowTabController.gd" id="3_kf7yb"]
[ext_resource type="Script" path="res://Scripts/LeftEditorController.gd" id="4_dmqvd"]
[ext_resource type="PackedScene" uid="uid://bc4f6taxy0f4a" path="res://Windows/MainEditor/TextureEditor.tscn" id="5_1gavc"]
[ext_resource type="Script" path="res://Scripts/PackController.gd" id="6_6teer"]

[node name="Control" type="Control" groups=["root"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3tn08")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainBackground" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0, 0.137255, 1)

[node name="MenuBarBackground" type="ColorRect" parent="Panel"]
custom_minimum_size = Vector2(0, 32.4)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.05
color = Color(0.0784314, 0.133333, 0.258824, 1)

[node name="ToolBar" type="MenuBar" parent="Panel/MenuBarBackground"]
custom_minimum_size = Vector2(0, 12.05)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.333
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
text_direction = 1
script = ExtResource("2_1fl1g")

[node name="TBAR_FILE" type="PopupMenu" parent="Panel/MenuBarBackground/ToolBar"]
size = Vector2i(575, 500)
wrap_controls = false
unresizable = false
min_size = Vector2i(100, 100)
hide_on_checkable_item_selection = false
item_count = 6
item_0/text = "SAVE_PACK"
item_0/id = 0
item_1/text = "OPEN_PACK"
item_1/id = 1
item_2/text = "OPEN_SAMPLE_MANAGER"
item_2/id = 4
item_3/text = "Test"
item_3/id = 99999
item_3/disabled = true
item_3/separator = true
item_4/text = "Bedrock Test"
item_4/id = 2
item_5/text = "Java Test"
item_5/id = 3

[node name="TBAR_PROJECT" type="PopupMenu" parent="Panel/MenuBarBackground/ToolBar"]

[node name="PopupMenu" type="PopupMenu" parent="Panel/MenuBarBackground/ToolBar"]
title = "TBAR_FILE"

[node name="EditorWindowTabs" type="HBoxContainer" parent="Panel/MenuBarBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_right = 0.666
anchor_bottom = 1.0
alignment = 1
script = ExtResource("3_kf7yb")

[node name="TextureEditorButton" type="Button" parent="Panel/MenuBarBackground/EditorWindowTabs"]
layout_mode = 2
text = "TBAR_TEXTURE"

[node name="TextEditorButton" type="Button" parent="Panel/MenuBarBackground/EditorWindowTabs"]
layout_mode = 2
text = "TBAR_TEXT_EDITOR"

[node name="Editor Window" type="HSplitContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 210

[node name="EditorWindowLeft" type="ColorRect" parent="Panel/Editor Window"]
layout_mode = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 1)
script = ExtResource("4_dmqvd")

[node name="EditorWindowRight" type="TabContainer" parent="Panel/Editor Window"]
layout_mode = 2
tabs_visible = false

[node name="TextureEditor" type="Panel" parent="Panel/Editor Window/EditorWindowRight"]
layout_mode = 2

[node name="Control" parent="Panel/Editor Window/EditorWindowRight/TextureEditor" instance=ExtResource("5_1gavc")]
layout_mode = 1

[node name="TextEditor" type="Panel" parent="Panel/Editor Window/EditorWindowRight"]
visible = false
layout_mode = 2

[node name="PackController" type="Node" parent="."]
script = ExtResource("6_6teer")

[node name="Node" type="Node" parent="PackController"]

[connection signal="selected_pack" from="." to="PackController" method="_on_control_selected_pack"]
[connection signal="update_left_editor_window" from="." to="Panel/Editor Window/EditorWindowLeft" method="_on_control_update_left_editor_window"]
[connection signal="toolbar_action" from="Panel/MenuBarBackground/ToolBar" to="." method="_on_tool_bar_toolbar_action"]
[connection signal="index_pressed" from="Panel/MenuBarBackground/ToolBar/TBAR_FILE" to="Panel/MenuBarBackground/ToolBar" method="_on_file_index_pressed"]
[connection signal="pressed" from="Panel/MenuBarBackground/EditorWindowTabs/TextureEditorButton" to="Panel/MenuBarBackground/EditorWindowTabs" method="_on_texture_editor_button_pressed"]
[connection signal="pressed" from="Panel/MenuBarBackground/EditorWindowTabs/TextEditorButton" to="Panel/MenuBarBackground/EditorWindowTabs" method="_on_text_editor_button_pressed"]
